@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Annotations are grouped into one submenu for narrow screens
+
 
 Version 2.4 (2022-11-02)
 ========================
